--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,9 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 lib_deps = arduino-libraries/Stepper@^1.1.3
+
+[env:Uno]
+board = uno
+platform = atmelavr
+framework = arduino
+lib_deps = arduino-libraries/Stepper @ ^1.1.3
